--- a/test/gateway/values.yaml
+++ b/test/gateway/values.yaml
@@ -43,6 +43,7 @@ securityContext: {}
 service:
   type: ClusterIP
   port: 8080
+  metricsPort: 9090
 
 ingress:
   enabled: true
@@ -109,3 +110,9 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+monitoring:
+  # 4. Global toggle to enable the ServiceMonitor resource
+  enabled: true
+  # 5. Label selector used by the Prometheus Operator
+  selectorLabel: prometheus
