--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
     "port": "8080",
     "routes": [
         {
-            "path": "/api/v1/data-service",
-            "backend_url": "http://data-service:8081"
+            "path": "/api/v1/",
+            "backend_url": "http://localhost:8081"
         }
     ]
 }
